--- a/Tracer.Web/Styles/main.css
+++ b/Tracer.Web/Styles/main.css
@@ -25,7 +25,6 @@ body {
   margin: 0 auto;
 }
 
-
 /* prevents the navbar from being blocked by the loading overlay. */
 .navbar {
     z-index: 1000 !important;
@@ -39,8 +38,20 @@ body {
 
 .panel {
     position: relative;
-    padding: 10px;
-    min-height: 400px;
+    height: 425px;
+}
+
+.panel-title {
+    text-overflow: ellipsis;
+}
+
+.dropdown-menu {
+    position: absolute !important;
+}
+
+.panel a {
+    color: inherit;
+    text-decoration: none;
 }
 
 .selected {
@@ -57,6 +68,7 @@ body {
 }
 
 #event-info-container {
+    max-height: 400px;
     padding: 0 !important;
 }
 
@@ -65,12 +77,13 @@ body {
     padding-bottom: 0 !important;
 }
 
-#event-info-arguments-tab li {
-    padding: 0px !important;
+#event-table-container-body {
+    padding-top: 0;
 }
 
-#event-info-error-tab {
-    overflow-wrap: break-word;
+#event-tree-container {
+    max-height: 400px;
+    padding: 0 !important;
 }
 
 .text-area {
@@ -145,4 +158,8 @@ body {
 
 .warning {
     background-color: #ff9800;
+}
+
+.dataTables_filter {
+    display: none; 
 }
