Tidying up the UI
Fixed issue with error counter in nav bar always showing one error.
Fixed issue with event state in the event tree / event summary being set
to "Failed" rather then "Pending" when waiting for a state update.
Added WindowsUsername to event info panel.

--- a/Tracer.Web/Styles/main.css
+++ b/Tracer.Web/Styles/main.css
@@ -163,3 +163,11 @@ body {
 .dataTables_filter {
     display: none; 
 }
+
+.list-group-item {
+    border-left: 0;
+    border-right: 0;
+    border-bottom: #ddd;
+    border-bottom-width: 1px;
+    border-bottom-style: solid;
+}
