Placeholder state menu items
Added some placeholder state menu items.

--- a/Tracer.Web/Views/trace.html
+++ b/Tracer.Web/Views/trace.html
@@ -75,6 +75,7 @@
                                         <span class="caret"></span>
                                     </a>
                                     <ul id="state-dropdown" class="dropdown-menu" role="menu">
+                                        
                                         <li>
                                             <a id="state-dropdown-clear-state" href="#">Clear State</a>
                                         </li>
@@ -84,6 +85,21 @@
                                         <li>
                                             <a id="state-import-open" href="#">Import State</a>
                                         </li>
+
+                                        <li class="divider"></li>
+                                        
+                                        <li>
+                                            <a href="#">Save State To Local Storage (Not Implemented)</a>
+                                        </li>
+                                        
+                                        <li>
+                                            <a href="#">Save State To MongoDB (Not Implemented)</a>
+                                        </li>
+                                        
+                                        <li>
+                                            <a href="#">Import State From MongoDB (Not Implemented)</a>
+                                        </li>
+                                        
                                     </ul>
                                 </li>
                                 <li>
